--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,23 @@ div[class^="item-"]>a {
     text-decoration: underline solid #0067b8 2px;
     color: #0067b8;
 }
+@media (max-width:750px) {
+    div.nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    header {
+        padding: 15px 0;
+    }
+
+    div.nav>.logo {
+        margin-bottom: 15px;
+    }
+
+    nav {
+        margin: 0;
+    }
+}
